fixed height on mobile

--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -1182,7 +1182,7 @@ span.badge {
 	}
 
 	.chatbox-wrapper .container .right .chat-room {
-		height: 95%;
+		height: 90%;
 	}
 
 	.chatbox-wrapper .container .right .chat {
